# Comyco

./: .gitignore  Comyco (3).ipynb  README.md  desktop.ini  pyproject.toml
notebooks/: Comyco(3).ipynb
src/comyco/: __init__.py
src/comyco/data/: __init__.py  scenarios.py
src/comyco/experiments/: __init__.py  run_centralized.py  run_federated.py
src/comyco/federated/: __init__.py  client.py  dataset.py  model.py  server.py
src/comyco/reporting/: __init__.py  summaries.py
